# Course3Work

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/client/: Client.h
include/common/: Logger.h  Packet.h
include/server/: DatabaseManager.h  Server.h
src/client/: Client.cpp  main.cpp
src/common/: Logger.cpp
src/server/: DatabaseManager.cpp  Server.cpp  main.cpp
